package br.com.caio.padroes.comportamentais.state;

public interface State {
    void handle(Context context);
}